# bevy_3d_tiles

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml
assets/fixtures/: tiles3d-demo.3tz
assets/fixtures/tiles3d-demo/: tileset.json
assets/fixtures/tiles3d-demo/content/: c_ne.glb  c_nw.glb  c_se.glb  c_sw.glb  l_ne0.glb  l_ne1.glb  l_ne2.glb  l_ne3.glb  l_nw0.glb  l_nw1.glb  l_nw2.glb  l_nw3.glb  l_se0.glb  l_se1.glb  l_se2.glb  l_se3.glb  l_sw0.glb  l_sw1.glb  l_sw2.glb  l_sw3.glb  root.glb
examples/: decode_bench.rs  gen_tiles3d_fixture.rs  google_p3dt.rs  local_tileset.rs
src/: api.rs  archive.rs  content.rs  dither.rs  dither.wgsl  draco.rs  fetch.rs  geo.rs  geodesy.rs  ktx2.rs  lib.rs  meshopt.rs  mod.rs  schema.rs  traversal.rs
wasm/: LIBKTX-README.md  README.md  shims.js
