[package]
name = "bevy_3d_tiles"
version = "0.1.4"
edition = "2024"
rust-version = "1.95.0"
description = "OGC 3D Tiles 1.1 streaming renderer for Bevy — packed .3tz ranged reader, per-tile SSE traversal, glTF tile content, KTX2 + meshopt (+ Draco read), EXT_mesh_features picking, ECEF georeferencing, Google Photorealistic 3D Tiles. Native + WebGPU/wasm."
license = "MIT OR Apache-2.0"
repository = "https://github.com/Arvikasoft/bevy_3d_tiles"
readme = "README.md"
keywords = ["bevy", "3d-tiles", "geospatial", "gis", "cesium"]
categories = ["rendering", "game-development"]
# wasm/ (browser shims + libktx) and CI ship in the repo, not the package.
exclude = ["wasm/", ".github/"]

[package.metadata.docs.rs]
all-features = true

[features]
default = []
# Point-cloud tile content (glb POINTS) via bevy_pointcloud_x (our published
# fork of rlamarche/bevy_pointcloud). Heavy renderer — opt-in (the plan's
# "feature-gate heavy renderers" rule).
points = ["dep:bevy_pointcloud"]
# Gaussian-splat tile content (KHR_gaussian_splatting) via bevy_gaussian_splatting.
splats = ["dep:bevy_gaussian_splatting"]

[dependencies]
# Caret, not exact-pin: the published lib must unify with consumers on any
# 0.18.x (bevy-client keeps its own app-side `=0.18.1` pin). Minimal render
# subset — the app/windowing stack (default_app, winit, x11, webgpu backend
# selection, tonemapping LUTs) belongs to the consuming app; examples add it
# back via [dev-dependencies].
bevy = { version = "0.18", default-features = false, features = [
    "std",
    "multi_threaded",
    "async_executor",
    "3d_bevy_render",
    "bevy_window",
    "bevy_log",
    "ktx2",
    "jpeg",
    "zstd_rust",
] }

# Tile GLB decode. Default features OFF; KHR_materials_unlit is REQUIRED for
# Google P3DT tiles (baked satellite lighting) or the strict gltf crate rejects them.
gltf = { version = "1.4", default-features = false, features = ["utils", "KHR_materials_unlit"] }
# 3tz index hashing (MD5 of the normalized path) + DEFLATE for 3tz entries.
md-5 = "0.10"
miniz_oxide = "0.8"
# tileset.json (de)serialization + the GLB/feature JSON side-channels.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Tile-texture decode (KTX2 fallback path).
image = { version = "0.25", default-features = false, features = ["png"] }
# Cross-thread fetch-task -> ECS bridge.
crossbeam-channel = "0.5"
# FetchError / archive errors.
thiserror = "2"

# Heavy tile-content renderers — optional, gated by the `points` / `splats`
# features. Both are crates.io deps, so every feature combination is
# publish-ready. `bevy_pointcloud_x` is our published fork of
# rlamarche/bevy_pointcloud (upstream is git-only — its potree/copc features
# carry git deps crates.io forbids); the dep is ALIASED to `bevy_pointcloud`
# so source imports stay upstream-compatible.
bevy_pointcloud = { package = "bevy_pointcloud_x", version = "0.1.0", optional = true }
bevy_gaussian_splatting = { version = "7", default-features = false, features = [
    "buffer_storage",
    "planar",
    "sh0",
    "io_ply",
    "io_bincode2",
    "sort_radix",
    "sort_std",
    "webgpu",
], optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
# Browser HTTP (ranged GETs for .3tz + tile content).
gloo-net = { version = "0.6", features = ["http"] }
# Async backoff sleep for the transient-fetch retry (fetch.rs).
gloo-timers = { version = "0.3", features = ["futures"] }
web-sys = { version = "0.3", features = [
    "Window",
    "Storage",          # P3DT daily-cap persistence
    "CacheStorage",     # window.caches()
    "Cache",            # content-addressed tile cache
    "Request",
    "Response",
    "AbortController",   # cancel out-of-cut tile fetches
    "AbortSignal",
    "UrlSearchParams",
] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# bevy's basis transcoder is C++ (native only; won't build for wasm) — KTX2/UASTC
# tile textures transcode via it on native, and via a JS shim on wasm.
bevy = { version = "0.18", default-features = false, features = ["basis-universal"] }
# Native byte-range source (runs on a worker thread, never inside an async runtime).
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "blocking"] }

[dev-dependencies]
base64 = "0.22"
# Examples need the app/window/render stack the library itself doesn't pull.
bevy = { version = "0.18", default-features = false, features = [
    "default_app",
    "default_font",
    "bevy_winit",
    "x11",
    "webgpu",
    "tonemapping_luts",
] }
